src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__overview__panel_view_scroll_with_markdown_content.snap
---
source: src/tui/snapshot_tests/overview.rs
expression: terminal.backend()
---
"╔═══════════════════════════════════════════════[ #42 — Add login flow ]═══════════════════════════════════════════════╗"
"║ RUNNING 2m30s  agent:claude  $0.12                                                                                  ║"
"║ctx: [▓▓▓▓░░░░░░] 35%                                                                                                 ║"
"║tok: ---                                                                                                              ║"
"║0 files                                                                                                               ║"
"║> _ Writing tests                                                                                                     ║"
"║First paragraph with bold text.                                                                                       ║"
"║                                                                                                                      ║"
"║Second paragraph with code.                                                                                           ║"
"║                                                                                                                      ║"
"║Third paragraph.                                                                                                      ║"
"║                                                                                                                      ║"
"║Fourth paragraph.                                                                                                     ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
