src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__overview__panel_view_selected_session.snap
---
source: src/tui/snapshot_tests/overview.rs
expression: terminal.backend()
---
"╔═════════════════[ #10 — Add login flow ]═════════════════╗╔══════════════════[ #11 — Another task ]══════════════════╗"
"║ RUNNING 2m30s  agent:claude  $0.12                      ║║ RUNNING 2m30s  agent:claude  $0.12                      ║"
"║ctx: [▓▓▓▓░░░░░░] 35%                                     ║║ctx: [▓▓▓▓░░░░░░] 35%                                     ║"
"║tok: ---                                                  ║║tok: ---                                                  ║"
"║0 files                                                   ║║0 files                                                   ║"
"║> _ Writing tests                                         ║║> _ Writing tests                                         ║"
"║Analyzing codebase...                                     ║║Analyzing codebase...                                     ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"║                                                          ║║                                                          ║"
"╚══════════════════════════════════════════════════════════╝╚══════════════════════════════════════════════════════════╝"
